--- a/FlowerShopNew/Views/Shared/_Layout.cshtml
+++ b/FlowerShopNew/Views/Shared/_Layout.cshtml
@@ -435,7 +435,7 @@
 
 
     <!-- BRAND LOGO AREA START -->
-    <div class="ltn__brand-logo-area  ltn__brand-logo-1 section-bg-1 pt-35 pb-35 plr--5">
+    <!--<div class="ltn__brand-logo-area  ltn__brand-logo-1 section-bg-1 pt-35 pb-35 plr--5">
         <div class="container-fluid">
             <div class="row ltn__brand-logo-active">
                 <div class="col-lg-12">
@@ -475,7 +475,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- BRAND LOGO AREA END -->
 
 
