product update düzenlendi

--- a/FlowerShopNew/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/FlowerShopNew/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -53,7 +53,7 @@
 					<!--begin::Card body-->
 					<div class="card-body pt-0">
 						<div class="mb-10 fv-row">
-							<label class="required form-label">Category Name</label>
+							<label class="required form-label">Kategori Adı</label>
 							<input type="text" class="form-control mb-2" placeholder="Category name" asp-for="Name" />
 							<div class="text-muted fs-7">A category name is required and recommended to be unique.</div>
 
@@ -83,9 +83,9 @@
 					<!--end::Button-->
 					<!--begin::Button-->
 					<button type="submit" id="kt_ecommerce_add_category_submit" class="btn btn-primary">
-						<span class="indicator-label">Save Changes</span>
+						<span class="indicator-label">Kaydet</span>
 						<span class="indicator-progress">
-							Please wait...
+							Lütfen Bekleyin...
 							<span class="spinner-border spinner-border-sm align-middle ms-2"></span>
 						</span>
 					</button>
