--- a/FlowerShopNew/Areas/Admin/Views/_ViewImports.cshtml
+++ b/FlowerShopNew/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using FlowerShopNew.Areas.Admin.Models
 @using FlowerShopNew.Areas.Admin.Models.ViewModels
-
+@using FlowerShopNew
 @using FlowerShopNew.Data.Entities
