--- a/FlowerShopNew/Views/_ViewImports.cshtml
+++ b/FlowerShopNew/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using FlowerShopNew
-@using FlowerShopNew.Models
+@using FlowerShopNew.Areas.Admin.Models
 @using FlowerShopNew.Areas.Admin.Models.ViewModels
-
+@using FlowerShopNew.Data.Entities
+@using FlowerShopNew.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
