--- a/FlowerShopNew/Areas/Admin/Views/Product/Index.cshtml
+++ b/FlowerShopNew/Areas/Admin/Views/Product/Index.cshtml
@@ -80,7 +80,7 @@
 								<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-semibold fs-7 w-125px py-4" data-kt-menu="true">
 									<!--begin::Menu item-->
 									<div class="menu-item px-3">
-										<a href="/Admin/Product/UpdateProduct" class="menu-link px-3">Edit</a>
+										<a href="/Admin/Product/UpdateProduct/@pr.Id" class="menu-link px-3">Edit</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
